/**
 * A ProtoBuf-based Benzina dataset description format.
 * 
 * In a dataset folder ROOT/, the following files must exist at a minimum:
 * 
 * ROOT/
 *     data.bin         (uint8_t  records)
 *     data.lengths     (uint64_t fixed-size array, Little-Endian)
 *     data.nvdecode    (struct CUVIDDECODECREATEINFO fixed-size array, Little-Endian)
 *     data.protobuf    (ProtoBuf records containing Little-Endian data)
 *     README.md        (Text)
 *     SHA256SUMS       (Text)
 * 
 * It's helpful to also have the following:
 * 
 * ROOT/
 *     data.h264 -> data.bin (symlink)
 * 
 * The protobuf-encoded file being described by this .proto template is the
 * data.protobuf file.
 * 
 * Currently, the only thing recorded in the .protobuf dataset description is
 * the creation parameters of a CUvidecodecoder.
 */

syntax = "proto3";


message BenzinaDataset{
	enum CudaVideoCodec{
		MPEG1 = 0;
		H264  = 4;
		JPEG  = 5;
		HEVC  = 8;
		VP8   = 9;
		VP9   = 10;
	};
	enum CudaVideoChromaFormat{
		MONOCHROME = 0;
		YUV420     = 1;
		YUV422     = 2;
		YUV444     = 3;
	};
	enum CudaVideoSurfaceFormat{
		NV12 = 0;
		P016 = 1;
	};
	enum CudaVideoDeinterlaceFormat{
		WEAVE    = 0;
		BOB      = 1;
		ADAPTIVE = 2;
	};
	
	/* Dataset Description Format Version */
	uint64                     version           =         1;
	
	/**
	 * Information for decoder object creation.
	 * 
	 * Essentially, the contents of struct CUVIDDECODECREATEINFO.
	 */
	
	uint64                     codedWidth        =  33554432;
	uint64                     codedHeight       =  33554433;
	uint64                     numDecodeSurfaces =  33554434;
	CudaVideoCodec             codecType         =  33554435;
	CudaVideoChromaFormat      chromaFormat      =  33554436;
	reserved                                        33554437;
	uint64                     bitDepthMinus8    =  33554438;
	uint64                     intraDecodeOnly   =  33554439;
	reserved                                        33554440 to 33554442;
	int32                      displayLeft       =  33554443;
	int32                      displayTop        =  33554444;
	int32                      displayRight      =  33554445;
	int32                      displayBottom     =  33554446;
	CudaVideoSurfaceFormat     outputFormat      =  33554447;
	CudaVideoDeinterlaceFormat deinterlaceMode   =  33554448;
	uint64                     targetWidth       =  33554449;
	uint64                     targetHeight      =  33554450;
	uint64                     numOutputSurfaces =  33554451;
	reserved                                        33554452;
	int32                      targetLeft        =  33554453;
	int32                      targetTop         =  33554454;
	int32                      targetRight       =  33554455;
	int32                      targetBottom      =  33554456;
	reserved                                        33554457 to 33554461;
};
